# iswift

./: .gitignore  README.md  manage.py  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: contributing.rst  faq.rst  glossary.rst  index.rst  intro.rst  quickstart.rst  testing.rst
iswift/: azureurls.py  azureviews.py  exceptions.py  hooks.py  settings.py  urls.py  views.py  wsgi.py
iswift/accesscontrol/: models.py  tests.py  views.py
iswift/azureapi/: azureapi.py  testazureapi.py  urls.py  views.py
iswift/books/: admin.py  models.py  views.py
iswift/companymanager/: urls.py  views.py
iswift/download/: models.py  urls.py  views.py
iswift/folderlist/: admin.py  models.py  tests.py  views.py
iswift/footerpages/: models.py  urls.py  views.py
iswift/func_utility/: functions.py  models.py  tests.py  views.py
iswift/organization/: models.py  views.py
iswift/privatefiles/: models.py  tests.py  urls.py  views.py
iswift/supermanager/: urls.py  views.py
iswift/swiftapi/: authclass.py  baseform.py  jsonutils.py  messages.py  normaltree.py  test_api.py  tests.py  views.py
iswift/templates/: 404.html  500.html  _messages.html  _stylesheets.html  base.html  footer.html  head.html  home.html
iswift/tests/: settings.py
iswift/versioncontrol/: models.py  tests.py  views.py
iswift/wsgi/: django.wsgi
tools/: dash  install_venv.py  install_venv_common.py  installiswift
tools/settings/: 1111object-expirer.conf  fstab  iswift.conf  keystone.conf  local_settings.py  object-expirer.conf  openstack-dashboard.conf  (+5 more)
(+85 files in other folders)
