[metadata]
name = iswift
version = 0.1
summary = iswift
description-file =
    README.md
author = cloudcraft.cn
author-email = iswift@cloudcraft.cn
home-page = https://github.com/gotostack/iswift
classifier =
    Development Status :: 1 - trunk
    Environment :: python
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Topic :: Internet :: WWW/HTTP

[global]
setup-hooks =
    iswift.hooks.setup_hook

[files]
packages =
    iswift

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
verbosity=2
detailed-errors=1
